<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#449944"
    android:orientation="vertical"
    android:padding="10dip" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:text="@string/username"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:password="false"
        android:singleLine="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:text="@string/password"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:password="true"
        android:singleLine="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:text="@string/password_again"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/passwordAgain"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:password="true"
        android:singleLine="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:text="@string/email"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:password="false"
        android:singleLine="true" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="0.5"
            android:background="@drawable/button_round"
            android:text="@string/sign_up" />

        <LinearLayout
            android:layout_width="16dp"
            android:layout_height="fill_parent" >
        </LinearLayout>

        <Button
            android:id="@+id/cancel_signUp"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="0.5"
            android:background="@drawable/button_round_register"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>