<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#449944"
    android:orientation="vertical"
    android:padding="10dip" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="90dp"
        android:text="@string/username"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:password="false"
        android:singleLine="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:text="@string/password"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:password="true"
        android:singleLine="true" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_weight="0.5"
            android:background="@drawable/button_round_login"
            android:text="@string/login" />

        <LinearLayout
            android:layout_width="6dp"
            android:layout_height="12dp" >
        </LinearLayout>

        <Button
            android:id="@+id/cancel_login"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_weight="0.5"
            android:background="@drawable/button_round_register"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>