<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#449944"
    android:orientation="vertical" >

    <TextView
        android:layout_marginTop="80dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:padding="10dip"
        android:text="@string/friend_username" />

    <EditText
        android:id="@+id/newFriendUsername"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:clickable="true"
        android:padding="10dip"
        android:password="false"
        android:singleLine="true" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/addFriend"
           android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/button_round_login"
            android:layout_weight="0.5"
            android:text="@string/add" />

        <LinearLayout
            android:layout_width="15dp"
            android:layout_height="fill_parent" >
        </LinearLayout>

        <Button
            android:id="@+id/cancel"
          android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/button_round_register"
            android:layout_weight="0.5"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>